--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,23 @@
+# Установка типа терминала по умолчанию
 set -g default-terminal "screen-256color"
 
+# Активация режима с мышью
+# кликабельные окна, панели, размер панелей можно менять
 setw -g mouse on
 
+# Начало отсчета окон и панелей с 1
 set -g base-index 1
 
+# Управляющие последовательности tmux - отключено
+set-option -sg escape-time 0
+
+# Управляющие клавиши в стиле Vim
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Управление размерами окан в стиле Vim
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
