--- a/alacritty.yml
+++ b/alacritty.yml
@@ -6,6 +6,15 @@ window:
 
 font:
   normal:
-   family: JetBrains Mono
+    family: JetBrains Mono NL
+    style: Regular
 
-  size: 14.0
+  bold:
+    family: JetBrains Mono NL
+    style: Medium
+
+  italic:
+    family: JetBrains Mono NL
+    style: Italic
+
+  size: 13.0
